--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/SHIJYang/Smartboxes#readme",
   "dependencies": {
     "uview-plus": "^3.6.4",
-    "vue": "^3.5.22"
+    "vue": "^3.5.22",
+    "vue-i18n": "^9.2.2"
   }
 }
