--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/SHIJYang/Smartboxes#readme",
   "dependencies": {
+    "gsap": "^3.13.0",
     "uview-plus": "^3.6.4",
     "vue": "^3.5.22",
     "vue-i18n": "^9.2.2"
