--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,11 +5,11 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/smart_storage_system?useSSL=false&serverTimezone=UTC&characterEncoding=utf8
     username: root
-    password: root
+    password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: none # 生产环境建议设为validate或none
+      ddl-auto: update  # 生产环境建议设为validate或none
     show-sql: true
     properties:
       hibernate:
