--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
       base-url: http://localhost:11434
       chat:
         options:
-          model: qwen3:4B
+          model: qwen2.5:7b-instruct-q4_K_M
           temperature: 0.7
           max-tokens: 1000
 
